--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@brainhubeu/react-carousel": "^2.0.4",
     "@heroicons/react": "^2.0.18",
     "framer-motion": "^10.16.4",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-type-animation": "^3.2.0",
-    "styled-components": "^6.1.0"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
