--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
+    "resend": "^1.1.0",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
