--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@heroicons/react": "^2.0.18",
     "framer-motion": "^10.16.4",
     "next": "13.5.5",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
-    "resend": "^1.1.0",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
