--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-animated-numbers": "^0.16.0",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "react-type-animation": "^3.2.0",
     "swiper": "^10.3.1"
   },
