--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-animated-numbers": "^0.16.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-lottie-player": "^1.5.5",
     "react-type-animation": "^3.2.0",
     "swiper": "^10.3.1"
   },
